--- a/scss/base/_requirements.config.scss
+++ b/scss/base/_requirements.config.scss
@@ -8,3 +8,4 @@
 @import '../../bower_components/accoutrement-reset/sass/reset';
 @import '../../bower_components/accoutrement-scale/sass/scale';
 @import '../../bower_components/accoutrement-strings/sass/strings';
+@import '../../bower_components/accoutrement-queries/sass/queries';
