--- a/css/book.css
+++ b/css/book.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*!
  * Web Fonts from fontspring.com
  *
@@ -60,56 +61,51 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   font-family: 'franklin';
   font-style: normal;
   font-weight: normal;
-  
   src: url('../fonts/franklin/franklingothic-regular-webfont.woff2') format('woff2'), url('../fonts/franklin/franklingothic-regular-webfont.woff') format('woff'), url('../fonts/franklin/franklingothic-regular-webfont.ttf') format('truetype'); }
 
 @font-face {
   font-family: 'franklin';
   font-style: normal;
   font-weight: bold;
-  
   src: url('../fonts/franklin/franklingothic-bold-webfont.woff2') format('woff2'), url('../fonts/franklin/franklingothic-bold-webfont.woff') format('woff'), url('../fonts/franklin/franklingothic-bold-webfont.ttf') format('truetype'); }
 
 @font-face {
   font-family: 'franklin';
   font-style: italic;
   font-weight: normal;
-  
   src: url('../fonts/franklin/franklingothic-italic-webfont.woff2') format('woff2'), url('../fonts/franklin/franklingothic-italic-webfont.woff') format('woff'), url('../fonts/franklin/franklingothic-italic-webfont.ttf') format('truetype'); }
 
 @font-face {
   font-family: 'franklin';
   font-style: italic;
   font-weight: bold;
-  
   src: url('../fonts/franklin/franklingothic-bolditalic-webfont.woff2') format('woff2'), url('../fonts/franklin/franklingothic-bolditalic-webfont.woff') format('woff'), url('../fonts/franklin/franklingothic-bolditalic-webfont.ttf') format('truetype'); }
+
+[role='banner'] .h-card {
+  font-family: 'franklin', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
 
 @font-face {
   font-family: 'rockingham';
   font-style: normal;
   font-weight: normal;
-  
   src: url('../fonts/rockingham/rockingham-regular-webfont.woff2') format('woff2'), url('../fonts/rockingham/rockingham-regular-webfont.woff') format('woff'), url('../fonts/rockingham/rockingham-regular-webfont.ttf') format('truetype'); }
 
 @font-face {
   font-family: 'rockingham';
   font-style: normal;
   font-weight: bold;
-  
   src: url('../fonts/rockingham/rockingham-bold-webfont.woff2') format('woff2'), url('../fonts/rockingham/rockingham-bold-webfont.woff') format('woff'), url('../fonts/rockingham/rockingham-bold-webfont.ttf') format('truetype'); }
 
 @font-face {
   font-family: 'rockingham';
   font-style: italic;
   font-weight: normal;
-  
   src: url('../fonts/rockingham/rockingham-italic-webfont.woff2') format('woff2'), url('../fonts/rockingham/rockingham-italic-webfont.woff') format('woff'), url('../fonts/rockingham/rockingham-italic-webfont.ttf') format('truetype'); }
 
 @font-face {
   font-family: 'rockingham';
   font-style: italic;
   font-weight: bold;
-  
   src: url('../fonts/rockingham/rockingham-bolditalic-webfont.woff2') format('woff2'), url('../fonts/rockingham/rockingham-bolditalic-webfont.woff') format('woff'), url('../fonts/rockingham/rockingham-bolditalic-webfont.ttf') format('truetype'); }
 
 html {
@@ -119,47 +115,110 @@ html {
   box-sizing: border-box; }
 
 html {
-  font-size: 100%;
-  line-height: 1.5em;
-  background: #000;
+  font-size: 112.5%;
+  line-height: 1.33333em;
+  background: #fff;
   color: #000; }
+  @media (min-width: 44em) {
+    html {
+      background: url('../images/cover.jpg') no-repeat fixed top right;
+      background-size: cover; } }
 
 html, body {
   height: 100%; }
 
-.splash {
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  background: url('../images/cover.jpg') no-repeat fixed right;
-  background-size: cover;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center; }
-  .splash body {
-    background: rgba(255, 255, 255, 0.85);
-    height: auto;
-    padding: 1rem;
+a:link, a:visited {
+  color: currentColor;
+  font-weight: bold;
+  text-decoration: none; }
+a:hover, a:focus, a:active {
+  color: #c00; }
+
+[role='banner'] {
+  background: rgba(255, 255, 255, 0.9);
+  padding: 0 0.55556rem; }
+  [role='banner']:after {
+    clear: both;
+    content: ' ';
+    display: block; }
+  [role='banner'] .h-card {
+    font-size: 0.77778rem;
+    line-height: 1.33333rem;
+    padding: 0.55556rem;
     text-align: center;
-    text-shadow: 0 1px 0 #fff; }
-  .splash h1 {
-    color: #f00;
-    font-size: 8vmin;
-    line-height: 8vmin;
-    margin: 0; }
-  .splash p {
-    margin: 0; }
-  .splash a:link, .splash a:visited {
-    color: #000;
+    text-transform: uppercase; }
+    @media (min-width: 44em) {
+      [role='banner'] .h-card {
+        float: right; } }
+  [role='banner'] a:link, [role='banner'] a:visited {
+    color: #c00;
+    font-weight: inherit; }
+  [role='banner'] a:hover, [role='banner'] a:focus, [role='banner'] a:active {
+    color: #d83f3f; }
+
+.title {
+  text-align: center; }
+  .title i {
+    color: #999999;
+    font-variant: small-caps; }
+  @media (min-width: 44em) {
+    .title {
+      float: left;
+      text-align: left; } }
+
+[rel="home"]:link, [rel="home"]:visited {
+  display: inline-block;
+  padding: 0.55556rem; }
+
+[role="main"] {
+  max-width: 45rem;
+  padding: 1.33333rem 2.38889rem; }
+  [role="main"] i {
+    background: rgba(255, 255, 255, 0.9);
+    padding: 0 0.55556rem 0 0; }
+
+.quotes {
+  padding: 1.33333rem 0; }
+  .quotes blockquote + blockquote {
+    margin-top: 1.33333rem; }
+  .quotes .text {
+    font-size: 1.77778rem;
+    line-height: 2rem;
+    font-style: italic; }
+  .quotes .open, .quotes .close {
+    color: #c00;
+    display: inline-block;
+    font-size: 2.38889rem;
     font-weight: bold; }
-  .splash a:hover, .splash a:focus, .splash a:active {
-    color: #f00; }
+  .quotes .open {
+    content: '“';
+    margin-left: -1.33333rem;
+    width: 1.33333rem; }
+  .quotes .close {
+    content: '”'; }
+  .quotes cite {
+    display: block; }
+    .quotes cite:before {
+      content: '— '; }
+
+.release {
+  padding: 1.33333rem 0;
+  text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 1px 1px 0 #fff, -1px -1px 0 #fff; }
+  .release [href*='teacupgorilla']:link, .release [href*='teacupgorilla']:visited {
+    font-size: 3.16667rem;
+    line-height: 3.33333rem;
+    color: #c00; }
+  .release .p-name {
+    font-size: 2.38889rem;
+    line-height: 2.66667rem;
+    margin-bottom: 1.33333rem; }
+  .release .sub {
+    font-variant: small-caps; }
+
+.details {
+  padding: 1.33333rem 0; }
+  .details b {
+    font-weight: bold; }
 
 
 /*# sourceMappingURL=book.css.map */
