--- a/scss/base/_colors.config.scss
+++ b/scss/base/_colors.config.scss
@@ -4,11 +4,17 @@
 $colors: (
   'black': #000,
   'white': #fff,
-  'red': #f00,
+  'red': #c00,
 
   background: 'white',
   text: 'black',
-  alt: 'red',
+  light: text (tint: 60%),
+  brand: 'red',
+
+  overlay: background (rgba: .9),
+
+  action: brand,
+  focus: brand (tint: 25%),
 
   contrast-dark: 'black',
   contrast-light: 'white',
