--- a/scss/base/_colors.config.scss
+++ b/scss/base/_colors.config.scss
@@ -14,7 +14,7 @@ $colors: (
   overlay: background (rgba: .9),
 
   action: brand,
-  focus: brand (tint: 25%),
+  focus: brand (shade: 15%),
 
   contrast-dark: 'black',
   contrast-light: 'white',
