--- a/templates/components/_release.html.j2
+++ b/templates/components/_release.html.j2
@@ -1,11 +1,10 @@
 <!-- Release Party -->
 
-<article class="release h-event">
+<article class="release h-event section">
+<div class="section-inner">
   <p class="presenters">
     <a href="http://teacupgorilla.com/">Teacup Gorilla</a>
-    and
-    <a href="http://springgunpress.com">SpringGun Press</a>
-    present:
+    presents:
   </p>
 
   <h2 class="p-name">
@@ -14,25 +13,26 @@
   </h2>
 
   <p class="p-summary">
-    Official book release,
+    Official
+    <a href="http://springgunpress.com">SpringGun Press</a>
+    book release,
     with special guests
     <a href="www.jkandtheloss.com">Jen Korte</a>
     and
-    <a href="www.opentothehound.com">Open to the Hound </a>
+    <a href="www.opentothehound.com">Open to the Hound</a>.
   </p>
 
   <ul class="event-details">
     <li class="p-location">
-      <a href="physicopera.com">Syntax Physic Opera</a>:
-      554 s broadway
+      <a href="physicopera.com">Syntax Physic Opera</a>
+      [554 s broadway]
     </li>
     <li class="dt-start">
       <a href="https://www.facebook.com/events/786303171446670/">
         <time datetime="2015-04-02T20:30:00-07:00">April 2, 8:30pm</time>
       </a>
-    </li>
-    <li class="p-cover">
-      $7 cover
+      [$7 cover]
     </li>
   </ul>
+</div>
 </article>
