--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,11 +9,11 @@
   <p class="copyright">
     <strong>Riding SideSaddle*</strong>
     © {{ config.copyright }}
-    <a href="http://ericsuzanne.com">
+    <a href="http://ericsuzanne.com" class="p-name">
       Eric M Suzanne
     </a>
     |
-    <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+    <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" rel="license">
       some rights reserved
     </a>
   </p>
