--- a/templates/components/_blurb.html.j2
+++ b/templates/components/_blurb.html.j2
@@ -1,24 +1,22 @@
 <!-- Book Blurbs -->
 
 {% if config.blurbs %}
-<article class="blurbs">
-{% for blurb in blurbs %}
+<article class="blurbs section">
+<div class="section-inner">
+{% for blurb in config.blurbs %}
 
   <figure class="blurb">
     <blockquote class="blurb-body">
-      {{ blurb.body }}
+      <span class="open">“</span>{{ blurb.body }}<span class="close">”</span>
     </blockquote>
 
-    <figcaption class="h-card">
+    <figcaption class="h-card blurb-cite">
+      —
       {% if blurb.cite %}
         {% if blurb.cite_url %}
-          <a href="{{ blurb.cite_url }}" class="p-name">
-            {{ blurb.cite }}
-          </a>{% if blurb.org %},{% endif %}
+          <a href="{{ blurb.cite_url }}" class="p-name">{{ blurb.cite }}</a>{% if blurb.org %},{% endif %}
         {% else %}
-          <span class="p-name">
-            {{ blurb.cite }}
-          </span>{% if blurb.org %},{% endif %}
+          <span class="p-name">{{ blurb.cite }}</span>{% if blurb.org %},{% endif %}
         {% endif %}
       {% endif %}
 
@@ -33,6 +31,7 @@
   </figure>
 
 {% endfor %}
+</div>
 </article>
 {% endif %}
 
