--- a/templates/components/_intro.html.j2
+++ b/templates/components/_intro.html.j2
@@ -1,10 +1,13 @@
 <!-- Book Intro -->
 
-<article class="intro">
+<article class="intro section">
+<div class="section-inner">
   <blockquote class="pullquote">
-    Sam gasps for air and finds herself alone.
-    Herman gasps for air and finds herself alone.
-    They wipe the mud from their body.
+    <p>
+      Sam gasps for air and finds herself alone.
+      Herman gasps for air and finds herself alone.
+      They wipe the mud from their body.
+    </p>
   </blockquote>
 
   <p class="description">
@@ -20,4 +23,5 @@
     and published by
     <a href="http://springgunpress.com">SpringGun Press</a>.
   </p>
+</div>
 </article>
