--- a/templates/components/_intro.html.j2
+++ b/templates/components/_intro.html.j2
@@ -11,7 +11,7 @@
   </blockquote>
 
   <p class="description">
-    <b>Riding SideSaddle*</b> is an
+    <b>{{ config.title }}</b> is an
     <a href="https://github.com/ericam/ridingsidesaddle.net">open-source novel</a>
     on note cards:
     created by <a href="http://ericsuzanne.com">Eric Suzanne</a>,
