--- a/templates/components/_release.html.j2
+++ b/templates/components/_release.html.j2
@@ -8,7 +8,7 @@
   </p>
 
   <h2 class="p-name">
-    Riding SideSaddle*
+    {{ config.title }}
     <span class="sub">[a novel affair]</span>
   </h2>
 
