--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,10 +7,10 @@
 
 <footer role="contentinfo">
   <p class="copyright">
-    <strong>Riding SideSaddle*</strong>
+    <strong>{{ config.title }}</strong>
     © {{ config.copyright }}
     <a href="http://ericsuzanne.com" class="p-name">
-      Eric M Suzanne
+      {{ config.author_full }}
     </a>
     |
     <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" rel="license">
