--- a/templates/components/_blurb.html.j2
+++ b/templates/components/_blurb.html.j2
@@ -7,7 +7,7 @@
 
   <figure class="blurb">
     <blockquote class="blurb-body">
-      <span class="open">“</span>{{ blurb.body }}<span class="close">”</span>
+      <span class="open">“</span>{{ blurb.body|safe }}<span class="close">”</span>
     </blockquote>
 
     <figcaption class="h-card blurb-cite">
