--- a/templates/components/_intro.html.j2
+++ b/templates/components/_intro.html.j2
@@ -11,17 +11,24 @@
   </blockquote>
 
   <p class="description">
-    <b>{{ config.title }}</b> is an
+    <b>{{ config.title }}</b> is
+    an
     <a href="https://github.com/ericam/ridingsidesaddle.net">open-source novel</a>
-    on note cards:
+    on note cards —
+    a fragmented memory of our time together,
+    and these bodies we inhabit —
     created by <a href="http://ericsuzanne.com">Eric Suzanne</a>,
     with contributions from
     <a href="http://jacobliechty.tumblr.com/">Jacob Liechty</a>,
     <a href="http://sondraedesign.tumblr.com/">Sondra Eby</a>,
     <a href="http://aaronliechty.tumblr.com/">Aaron Liechty</a>,
-    and others —
-    and published by
-    <a href="http://springgunpress.com">SpringGun Press</a>.
+    and others.
+    Published by
+    <a href="http://springgunpress.com">SpringGun Press</a>,
+    and made available under the
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+      Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License
+    </a>.
   </p>
 </div>
 </article>
