--- a/templates/components/_release.html.j2
+++ b/templates/components/_release.html.j2
@@ -2,6 +2,11 @@
 
 <article class="release h-event section">
 <div class="section-inner">
+  <div class="call-to-action">
+    Join us for the
+    <a href="https://www.facebook.com/events/786303171446670/">release party</a>!
+  </div>
+
   <p class="presenters">
     <a href="http://teacupgorilla.com/">Teacup Gorilla</a>
     presents:
@@ -13,9 +18,6 @@
   </h2>
 
   <p class="p-summary">
-    Official
-    <a href="http://springgunpress.com">SpringGun Press</a>
-    book release,
     with special guests
     <a href="www.jkandtheloss.com">Jen Korte</a>
     and
