--- a/content/static/css/screen.css
+++ b/content/static/css/screen.css
@@ -139,16 +139,17 @@ a:hover, a:focus, a:active {
   text-decoration: underline; }
 
 .section {
-  border-bottom: 2px dashed #c00; }
+  border-bottom: 2px dashed #c00;
+  padding: 4rem 0;
+  transition: all 300ms; }
+  @media (min-width: 45em) {
+    .section {
+      padding: 18vh 0; } }
 
 .section-inner {
   margin: 0 auto;
   max-width: 45rem;
-  padding: 5.33333rem 1.33333rem;
-  transition: all 300ms; }
-  @media (min-width: 45em) {
-    .section-inner {
-      padding: 25vh 1.33333rem; } }
+  padding: 1.33333rem; }
 
 h1 {
   font-size: 9vw;
@@ -162,7 +163,8 @@ h1 {
 @media (min-width: 45em) {
   [data-location='home'] .page {
     background: url('../images/cover.jpg') no-repeat scroll top right;
-    background-size: auto 100%; } }
+    background-size: auto 100%;
+    padding: 30vh 0; } }
 [data-location='home'] .page em {
   color: #666666;
   font-variant: small-caps; }
@@ -170,12 +172,19 @@ h1 {
     content: ' | '; }
 
 .release {
+  background: linear-gradient(to top, rgba(255, 255, 255, 0.9) 8rem, rgba(255, 255, 255, 0) 18.66667rem) no-repeat scroll, url('../images/tg-jen.jpg') no-repeat scroll;
+  background-clip: padding-box;
+  background-size: cover;
+  padding: 6.66667rem 0 0;
   position: relative; }
+  @media (min-width: 45em) {
+    .release {
+      padding: 50vh 0 0; } }
   .release .p-name {
-    font-size: 6vw;
-    line-height: 8vw;
+    font-size: 5vw;
+    line-height: 6.66667vw;
     margin-bottom: 0.66667rem; }
-    @media (min-width: 44.79167em) {
+    @media (min-width: 53.75em) {
       .release .p-name {
         font-size: 2.38889rem;
         line-height: 2.66667rem; } }
@@ -261,8 +270,8 @@ h1 {
     -webkit-transform: rotate(1.5deg);
     transform: rotate(1.5deg); }
   .pullquote:hover:before {
-    -webkit-transform: rotate(3deg) translate3d(10%, -20%, 0);
-    transform: rotate(3deg) translate3d(10%, -20%, 0); }
+    -webkit-transform: rotate(3deg) translate3d(20%, -20%, 0);
+    transform: rotate(3deg) translate3d(20%, -20%, 0); }
   .pullquote:hover:after {
     -webkit-transform: rotate(-3deg) translate3d(-10%, -30%, 0);
     transform: rotate(-3deg) translate3d(-10%, -30%, 0); }
