--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -124,7 +124,7 @@ html {
 html {
   font-size: 112.5%;
   line-height: 1.33333em;
-  background: #fff;
+  background: #000;
   color: #000;
   text-shadow: 0 1px 0 #fff; }
 
