--- a/templates/components/_release.html.j2
+++ b/templates/components/_release.html.j2
@@ -36,5 +36,9 @@
       [$7 cover]
     </li>
   </ul>
+
+  <a href="https://www.dropbox.com/sh/hernur1iocol84n/AADgWeHZLaCL0YuRA5MP6mMXa?dl=0" class="press-kit">
+    Get the <b>Press Kit</b>!
+  </a>
 </div>
 </article>
