--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -175,11 +175,11 @@ h1 {
   background: linear-gradient(to top, rgba(255, 255, 255, 0.9) 8rem, rgba(255, 255, 255, 0) 18.66667rem) no-repeat scroll, url('../images/tg-jen.jpg') no-repeat scroll;
   background-clip: padding-box;
   background-size: cover;
-  padding: 6.66667rem 0 0;
+  padding: 6.66667rem 0 1.33333rem;
   position: relative; }
   @media (min-width: 45em) {
     .release {
-      padding: 50vh 0 0; } }
+      padding: 50vh 0 1.33333rem; } }
   .release .p-name {
     font-size: 5vw;
     line-height: 6.66667vw;
@@ -204,8 +204,8 @@ h1 {
   padding: 1.33333rem;
   position: absolute;
   top: 0;
-  -webkit-transform: rotate(-.5deg) translate3d(-50%, -50%, 0);
-  transform: rotate(-.5deg) translate3d(-50%, -50%, 0);
+  -webkit-transform: translate3d(-50%, -50%, 0);
+  transform: translate3d(-50%, -50%, 0);
   white-space: nowrap; }
   @media (min-width: 40em) {
     .call-to-action {
@@ -228,6 +228,25 @@ h1 {
 .event-details {
   list-style: disc;
   margin: 0.66667rem 0; }
+
+.press-kit:link, .press-kit:visited {
+  background: #fff;
+  border: 2px solid #c00;
+  color: #000;
+  display: inline-block;
+  left: 50%;
+  padding: 1.33333rem;
+  position: absolute;
+  top: 100%;
+  -webkit-transform: translate3d(-50%, -50%, 0);
+  transform: translate3d(-50%, -50%, 0);
+  transition: all 300ms; }
+.press-kit:hover, .press-kit:focus, .press-kit:active {
+  text-decoration: none;
+  -webkit-transform: translate3d(-50%, -50%, 0) scale(1.25);
+  transform: translate3d(-50%, -50%, 0) scale(1.25); }
+.press-kit b {
+  color: #c00; }
 
 .intro {
   overflow: hidden; }
