--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,9 @@
   <meta property="og:site_name" content="{{ config.title }}"/>
   <meta property="og:url" content="{{ config.canonical_url }}" />
   <meta property="og:description" content="{{ config.longdesc }}" />
-  <meta property="og:image" content="/static/images/title.jpg" />
-  <meta property="og:image:width" content="1200px" />
-  <meta property="og:image:height" content="675px" />
+  <meta property="og:image" content="{{ config.canonical_url }}static/images/title.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="675" />
 
   <!-- Site Info -->
   {% block robots %}<meta name="robots" content="index, follow" />{% endblock %}
