--- a/templates/components/_release.html.j2
+++ b/templates/components/_release.html.j2
@@ -19,7 +19,7 @@
 
   <p class="p-summary">
     with special guests
-    <a href="www.jkandtheloss.com">Jen Korte</a>
+    <a href="www.jkandtheloss.com">Jen Korte, Jessica DeNicola</a>,
     and
     <a href="www.opentothehound.com">Open to the Hound</a>.
   </p>
