--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -354,5 +354,205 @@ h1 {
 .publisher a:link, .publisher a:visited {
   font-weight: bold; }
 
+@-webkit-keyframes blur {
+  0%, 60%, 75%, 80%, 100% {
+    -webkit-filter: blur(0);
+    filter: blur(0); }
+
+  70% {
+    -webkit-filter: blur(1.5px);
+    filter: blur(1.5px); }
+
+  95% {
+    -webkit-filter: blur(3px);
+    filter: blur(3px); } }
+
+@keyframes blur {
+  0%, 60%, 75%, 80%, 100% {
+    -webkit-filter: blur(0);
+    filter: blur(0); }
+
+  70% {
+    -webkit-filter: blur(1.5px);
+    filter: blur(1.5px); }
+
+  95% {
+    -webkit-filter: blur(3px);
+    filter: blur(3px); } }
+
+@-webkit-keyframes shake {
+  0%, 5%, 42%, 48%, 100% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); }
+
+  10% {
+    -webkit-transform: translate3d(-1px, -3px, 0);
+    transform: translate3d(-1px, -3px, 0); }
+
+  20% {
+    -webkit-transform: translate3d(-5px, 0, 0);
+    transform: translate3d(-5px, 0, 0); }
+
+  30% {
+    -webkit-transform: translate3d(0, 3px, 0);
+    transform: translate3d(0, 3px, 0); }
+
+  40% {
+    -webkit-transform: translate3d(1px, -1px, 0);
+    transform: translate3d(1px, -1px, 0); }
+
+  50% {
+    -webkit-transform: translate3d(-1px, 3px, 0);
+    transform: translate3d(-1px, 3px, 0); }
+
+  60% {
+    -webkit-transform: translate3d(-5px, 1px, 0);
+    transform: translate3d(-5px, 1px, 0); }
+
+  70% {
+    -webkit-transform: translate3d(3px, 1px, 0);
+    transform: translate3d(3px, 1px, 0); }
+
+  80% {
+    -webkit-transform: translate3d(-1px, -1px, 0);
+    transform: translate3d(-1px, -1px, 0); }
+
+  90% {
+    -webkit-transform: translate3d(3px, 3px, 0);
+    transform: translate3d(3px, 3px, 0); }
+
+  100% {
+    -webkit-transform: translate3d(1px, -3px, 0);
+    transform: translate3d(1px, -3px, 0); } }
+
+@keyframes shake {
+  0%, 5%, 42%, 48%, 100% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); }
+
+  10% {
+    -webkit-transform: translate3d(-1px, -3px, 0);
+    transform: translate3d(-1px, -3px, 0); }
+
+  20% {
+    -webkit-transform: translate3d(-5px, 0, 0);
+    transform: translate3d(-5px, 0, 0); }
+
+  30% {
+    -webkit-transform: translate3d(0, 3px, 0);
+    transform: translate3d(0, 3px, 0); }
+
+  40% {
+    -webkit-transform: translate3d(1px, -1px, 0);
+    transform: translate3d(1px, -1px, 0); }
+
+  50% {
+    -webkit-transform: translate3d(-1px, 3px, 0);
+    transform: translate3d(-1px, 3px, 0); }
+
+  60% {
+    -webkit-transform: translate3d(-5px, 1px, 0);
+    transform: translate3d(-5px, 1px, 0); }
+
+  70% {
+    -webkit-transform: translate3d(3px, 1px, 0);
+    transform: translate3d(3px, 1px, 0); }
+
+  80% {
+    -webkit-transform: translate3d(-1px, -1px, 0);
+    transform: translate3d(-1px, -1px, 0); }
+
+  90% {
+    -webkit-transform: translate3d(3px, 3px, 0);
+    transform: translate3d(3px, 3px, 0); }
+
+  100% {
+    -webkit-transform: translate3d(1px, -3px, 0);
+    transform: translate3d(1px, -3px, 0); } }
+
+.art {
+  -webkit-animation: blur 120s ease infinite both;
+  animation: blur 120s ease infinite both; }
+
+.image--1 {
+  -webkit-animation: shake 21s 12s linear infinite;
+  animation: shake 21s 12s linear infinite; }
+
+.mask--1 {
+  -webkit-animation: shake 14s 18s linear infinite;
+  animation: shake 14s 18s linear infinite; }
+
+.image--2 {
+  -webkit-animation: shake 42s 18s linear infinite;
+  animation: shake 42s 18s linear infinite; }
+
+.mask--2 {
+  -webkit-animation: shake 56s 21s linear infinite;
+  animation: shake 56s 21s linear infinite; }
+
+.image--3 {
+  -webkit-animation: shake 35s 30s linear infinite;
+  animation: shake 35s 30s linear infinite; }
+
+.mask--3 {
+  -webkit-animation: shake 7s 3s linear infinite;
+  animation: shake 7s 3s linear infinite; }
+
+.image--4 {
+  -webkit-animation: shake 28s 27s linear infinite;
+  animation: shake 28s 27s linear infinite; }
+
+.mask--4 {
+  -webkit-animation: shake 70s 3s linear infinite;
+  animation: shake 70s 3s linear infinite; }
+
+.image--5 {
+  -webkit-animation: shake 63s 27s linear infinite;
+  animation: shake 63s 27s linear infinite; }
+
+.mask--5 {
+  -webkit-animation: shake 49s 9s linear infinite;
+  animation: shake 49s 9s linear infinite; }
+
+.image--6 {
+  -webkit-animation: shake 14s 9s linear infinite;
+  animation: shake 14s 9s linear infinite; }
+
+.mask--6 {
+  -webkit-animation: shake 35s 21s linear infinite;
+  animation: shake 35s 21s linear infinite; }
+
+.image--7 {
+  -webkit-animation: shake 56s 21s linear infinite;
+  animation: shake 56s 21s linear infinite; }
+
+.mask--7 {
+  -webkit-animation: shake 14s 18s linear infinite;
+  animation: shake 14s 18s linear infinite; }
+
+.image--8 {
+  -webkit-animation: shake 28s 15s linear infinite;
+  animation: shake 28s 15s linear infinite; }
+
+.mask--8 {
+  -webkit-animation: shake 28s 24s linear infinite;
+  animation: shake 28s 24s linear infinite; }
+
+.image--9 {
+  -webkit-animation: shake 28s 6s linear infinite;
+  animation: shake 28s 6s linear infinite; }
+
+.mask--9 {
+  -webkit-animation: shake 49s 18s linear infinite;
+  animation: shake 49s 18s linear infinite; }
+
+.image--10 {
+  -webkit-animation: shake 49s 12s linear infinite;
+  animation: shake 49s 12s linear infinite; }
+
+.mask--10 {
+  -webkit-animation: shake 42s 27s linear infinite;
+  animation: shake 42s 27s linear infinite; }
+
 
 /*# sourceMappingURL=screen.css.map */
